--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -6,7 +6,7 @@
   justify-content: center;
   position: relative;
   overflow: hidden;
-  padding-top: calc(var(--navbar-height) + 1rem);
+  padding-top: 2rem;
 }
 
 .hero-bg {
